--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <!-- Floating text and transparent circle -->
     <div class="container-fluid calendar-background">
         <div class="row justify-content-center">
-            <div class="col-10 santa-letter">
+            <div class="col-10">
 
                 <!-- <div class="text-center pt-5 mt-5">
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
