--- a/templates/profile.html
+++ b/templates/profile.html
@@ -130,8 +130,9 @@
         <h3 class="x-mas-text">Upcoming Events</h3>
         <div class="row">
             <div class="col-12 event-container">
-                {% for event in all_events_list %}
+                {% for event in event_name_list %}
                     {{ event }}
+                    <br>
                 {% endfor %}
             </div>
         </div>
