--- a/templates/login.html
+++ b/templates/login.html
@@ -19,12 +19,13 @@
         <form action="" method="post">
           <div class="form-group">
               <label for="InputEmail">Email address</label>
-              <input name="email" class="form-control" id="InputEmail"  placeholder="Enter email">
+              <input name="email" class="form-control validate" id="InputEmail" type="email" placeholder="Enter email" required>
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
             <div class="form-group">
               <label for="InputPassword">Password</label>
-              <input type="password" name="password" class="form-control" id="InputPassword" placeholder="Password">
+              <input type="password" name="password" class="form-control validate" type="password" id="InputPassword" minlength="5" maxlength="15"
+              pattern="^[a-zA-Z0-9]{5,15}$" placeholder="Password" required>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
