--- a/templates/register.html
+++ b/templates/register.html
@@ -19,22 +19,25 @@
         <form action="" method="post">
           <div class="form-group">
               <label for="Username">Username</label>
-              <input name="username" class="form-control" id="inputUserName" aria-describedby="emailHelp" placeholder="Enter username">
+              <input name="username" class="form-control required" type="text" minlength="5" maxlength="15"
+              pattern="^[a-zA-Z0-9]{5,15}$" id="inputUserName" aria-describedby="emailHelp" placeholder="Enter username" required>
               <small id="userName" class="form-text text-muted">Please enter your username</small>
         </div>
         <div class="form-group">
               <label for="InputEmail">Email address</label>
-              <input name="email" class="form-control" id="InputEmail"  placeholder="Enter email">
+              <input name="email" class="form-control required" type="email" id="InputEmail"  placeholder="Enter email" required>
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
           <label for="InputPassword">Password</label>
-          <input type="password" name="password1" class="form-control" id="InputPassword" placeholder="Password">
+          <input type="password" name="password1" type="password" class="form-control validate" minlength="5" maxlength="15"
+          pattern="^[a-zA-Z0-9]{5,15}$" id="InputPassword" placeholder="Password" required>
         </div>
       
           <div class="form-group">
           <label for="InputPassword2">Repeat Password</label>
-          <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="Repeat Password">
+          <input type="password" name="password2" type="password" class="form-control validate" minlength="5" maxlength="15"
+          pattern="^[a-zA-Z0-9]{5,15}$" id="InputPassword2" placeholder="Repeat Password" required>
       
           </div>
         <button type="submit" class="btn btn-primary">Submit</button>
