--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,14 +3,14 @@
 {% block content %}
 <!-- Header -->
 <div class="row">
-    <h1 class="col text-center x-mas-text mt-5">Profile Page</h1>
+    <h1 class="col text-center x-mas-text mt-5">{{ user.name|title }}'s Profile Page</h1>
 </div>
 
 <div class="row">
     <!-- Avatar and edit profile -->
     <div class="col-12 col-md-6 col-lg-3">
         <div class="row justify-content-center">
-            <h3 class="col-12 text-center">{{ user.name }}'s Profile</h3>
+            <h3 class="col-12 text-center x-mas-text">{{ user.name|title }}'s Profile</h3>
             <img src="{{ url_for('static', filename='images/placeholder-user.jpg') }}" alt="User avatar" class="col-12 user-avatar">
             <button class="btn btn-primary col-6" onclick="showEdit();">
                 Edit Profile
@@ -30,7 +30,7 @@
                         <input type="text" class="form-control" value="{{ user.name }}" aria-label="Username"
                             aria-describedby="username" name="username" required>
                     </div>
-        
+
                     <div class="input-group mb-3" id="user_email">
                         <span class="input-group-text" id="email">Email</span>
                         <input type="text" class="form-control" value="{{ user.email }}" aria-label="Email"
@@ -58,48 +58,32 @@
 
     <!-- event buttons  -->
     <div class="col-12 col-md-6 col-lg-9 mt-5">
-        <div class="row">
+        <div class="row justify-content-around">
 
             <!-- Create new event button -->
             <div class="col-12 col-md-2 col-lg-3" style="position: relative;">
-                <div class="col text-center">
-                    <button type="button" class="custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Create A New Event
-                    </button>
-                </div>
+                <h3 class="x-mas-text text-center">Create a New Event</h3>
+                    <div class="text-center">
+                        <button type="button" class="mt-3 custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            Create A New Event
+                        </button>
+                    </div>
             </div>
-            
-            <!-- <div class="col-12 col-md-2 col-lg-3" style="position: relative;">
-                <div class="col text-center">
-                    <button type="button" class="custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Add A New Event to Profile
-                    </button>
-                </div>
-            </div> -->
-            
-            <!-- <div class="col-12 col-md-2 col-lg-3" style="position: relative;">
-                <div class="col text-center">
-                    <button type="button" class="custom-button" data-bs-toggle="modal" data-bs-target="#familyModal">
-                    Create a New family
-                </button>
-            </div>
-        </div> -->
-        <!-- family container -->
-        <div class="col-12 col-md-4 col-lg-6">
-            <!-- <div class="row"> -->
-                <!-- <div class="col-12 event-container"> -->
-                     <!-- url_for('add_to_family', user_id=user._id)  -->
-                    <form method="POST" action="{{ url_for('add_to_family', user_id=user._id) }}">
-                        <select name="all_families_name" id="all_families_name">
+
+            <div class="col-12 col-md-2 col-lg-3">
+                <form method="POST" action="{{ url_for('add_to_family', user_id=user._id) }}">
+                    <h3 class="x-mas-text text-center">Join a new family</h3>
+                    <div class="row justify-content-center">
+                        <select class="mx-auto" name="all_families_name" id="all_families_name">
                             {% for family in join_family %}
                                 <option value="{{family.name}}">{{family.name}}</option>
                             {% endfor %}
                         </select>
-                        <button type="submit" class="btn btn-success">Join Family</button>
-                    </form>
-                <!-- </div> -->
-            <!-- </div> -->
-        </div>
+                        <button type="submit" class="custom-button mt-3">Join Family</button>
+                    </div>
+                </form>
+            </div>
+
     </div>
     </div>
 
@@ -110,8 +94,11 @@
 
 
 <!-- Previous Container -->
-<div class="row">
-    <div class="col-4">
+<div class="row justify-content-between">
+
+
+
+    <div class="col-3">
         <h3 class="x-mas-text">Previous Events</h3>
         <div class="row">
             <div class="col-10 event-container">
@@ -126,12 +113,25 @@
     </div>
 
     <!-- Upcoming Container -->
-    <div class="col-8">
+    <div class="col-7">
         <h3 class="x-mas-text">Upcoming Events</h3>
         <div class="row">
             <div class="col-12 event-container">
                 {% for event in event_name_list %}
-                    {{ event }}
+                    {{ event[0] }}:
+                    {% for for_layer in event %}
+                        {% for for_layer1 in for_layer %}
+                            {% for food in for_layer1[1]  %}
+                                {% if loop.first %}
+                                    Bring These Dishes:
+                                {% endif %}
+                                    {{ food }}
+                                {% if not loop.last %}
+                                    and
+                                {% endif %}
+                            {% endfor %}
+                        {% endfor %}
+                    {% endfor %}
                     <br>
                 {% endfor %}
             </div>
