--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,16 +10,14 @@
     <!-- Avatar and edit profile -->
     <div class="col-12 col-md-6 col-lg-3">
         <div class="row justify-content-center">
-            <h3 class="col-12 text-center x-mas-text">{{ user.name|title }}'s Profile</h3>
-            <img src="{{ url_for('static', filename='images/placeholder-user.jpg') }}" alt="User avatar" class="col-12 user-avatar">
-            <button class="btn btn-primary col-6" onclick="showEdit();">
+            <!-- <h3 class="col-12 text-center x-mas-text">{{ user.name|title }}'s Profile</h3> -->
+            <img src="{{ url_for('static', filename='images/placeholder-user.jpg') }}" alt="User avatar" class="col-12 user-avatar mt-5">
+            <button class="custom-button blue-button col-6 mt-3" onclick="showEdit();">
                 Edit Profile
             </button>
         </div>
         <div class="row justify-content-center">
-            <button class="btn btn-success col-6" data-bs-toggle="modal" data-bs-target="#familyModal">
-                Create Family
-            </button>
+
         </div>
         <!-- Edit profile form -->
         <div class="row">
@@ -62,10 +60,13 @@
 
             <!-- Create new event button -->
             <div class="col-12 col-md-2 col-lg-3" style="position: relative;">
-                <h3 class="x-mas-text text-center">Create a New Event</h3>
+                <h3 class="x-mas-text text-center">Create a New Event or Family</h3>
                     <div class="text-center">
-                        <button type="button" class="mt-3 custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <button type="button" class="mt-3 green-button custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             Create A New Event
+                        </button>
+                        <button class="custom-button magenta-button col-6" data-bs-toggle="modal" data-bs-target="#familyModal">
+                            Create Family
                         </button>
                     </div>
             </div>
@@ -79,7 +80,7 @@
                                 <option value="{{family.name}}">{{family.name}}</option>
                             {% endfor %}
                         </select>
-                        <button type="submit" class="custom-button mt-3">Join Family</button>
+                        <button type="submit" class="teal-button custom-button mt-3">Join Family</button>
                     </div>
                 </form>
             </div>
@@ -94,7 +95,7 @@
 
 
 <!-- Previous Container -->
-<div class="row justify-content-between">
+<div class="row justify-content-between mt-5">
 
 
 
