more profile styling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -267,6 +267,10 @@ body {
     border: 2px solid #00EAFC!important;
 }
 
+.event-text {
+    
+}
+
 /* Event create/edit page */
 
 .event-container {
