--- a/static/css/style.css
+++ b/static/css/style.css
@@ -317,6 +317,43 @@ body {
     margin-bottom: 20px;
 }
 
+/* Contact page style */
+
+.contact-container {
+    color: #fafafa;
+}
+
+.member-row {
+    background: rgba(0, 0, 0, 0.8);
+    margin: 20px;
+    padding: 15px;
+    border-radius: 25px;
+    border: 2px solid #fafafa
+}
+
+.member-row .row {
+    margin: 10px 0;
+}
+
+.member-name hr {
+    border: 2px solid #fafafa;
+    border-radius: 2px;
+    opacity: 1;
+}
+
+.member-row .member-social {
+    margin-top: 0;
+}
+
+.member-social a {
+    text-decoration: none;
+    color: #fafafa;
+}
+
+.member-social a i {
+    font-size: 50px;
+}
+
 /* Profile page */
 .user-avatar {
     max-width: 100%;
