--- a/templates/login.html
+++ b/templates/login.html
@@ -16,10 +16,11 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form action="" method="post">
+        <form action="" method="post" id="login-form">
           <div class="form-group">
               <label for="InputEmail">Email address</label>
               <input name="email" class="form-control validate" id="InputEmail" type="email" placeholder="Enter email" required>
+              <p id="email-validation-message"></p>
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
             <div class="form-group">
