Change Contact button classes to match rest

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                                 href="{{ url_for('register')}}">Register</a>
                         </li>
                         {% endif %}
-                        <li class="nav-item">
+                        <li class="btn btn-red">
                             <a class="nav-link {{ 'active' if active_page == 'contact' }}" href="{{ url_for('contact')}}">Contact</a>
                         </li>
                     </ul>
@@ -94,7 +94,7 @@
                                     href="{{ url_for('register')}}">Register</a>
                             </li>
                             {% endif %}
-                            <li class="nav-item">
+                            <li class="btn btn-red">
                                 <a class="nav-link {{ 'active' if active_page == 'contact' }}"
                                     href="{{ url_for('contact')}}">Contact</a>
                             </li>
